--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # The following should be set in config/application.properties.
 # This contains secrets that should not be included here.
 # Update this with your own IP (if not localhost) and schema, and your username and password
-spring.datasource.url=jdbc:mysql://localhost:3306/schema?useSSL=false&serverTimezone=America/Detroit
+spring.datasource.url=jdbc:mysql://localhost:3306/jellybean_db?useSSL=false&serverTimezone=America/Detroit
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=Redbud116@
